--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   }
   </style>
   </head>
+  <h1>VALORANT CHART</h1>
   <body>
     <div id="chart-container"></div>
 <!-- Include the D3.js library -->
