prizes pool bar chart
update prizes pool horizontal bar chart for valorant and counter-strike. Each chart separated by different Javascript file and using select tag to change between charts.

--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
  <script src="https://d3js.org/d3.v7.min.js"></script>
 <!-- Include your custom script file-->
  <script src="scriptstart.js"></script>
+ <a href="prizesindex.html">VALORANT/COUNTER-STRIKE PRIZES POOL CHART</a>
 </body>
 </html>
