--- a/index/prizesIndex.html
+++ b/index/prizesIndex.html
@@ -41,12 +41,12 @@
 
     <div id="chart"></div>
 
-    <script src="prizeschart/americacs.js"></script>
-    <script src="prizeschart/americaval.js"></script>
-    <script src="prizeschart/emeacs.js"></script>
-    <script src="prizeschart/emeaval.js"></script>
-    <script src="prizeschart/pacificcs.js"></script>
-    <script src="prizeschart/pacificval.js"></script>
-    <script src="barchart.js"></script>
+    <script src="chartScript/prizeschart/americacs.js"></script>
+    <script src="chartScript/prizeschart/americaval.js"></script>
+    <script src="chartScript/prizeschart/emeacs.js"></script>
+    <script src="chartScript/prizeschart/emeaval.js"></script>
+    <script src="chartScript/prizeschart/pacificcs.js"></script>
+    <script src="chartScript/prizeschart/pacificval.js"></script>
+    <script src="chartScript/prizeschart/barchart.js"></script>
 </body>
 </html>
