--- a/homeIndex.html
+++ b/homeIndex.html
@@ -10,13 +10,19 @@
 </head>
 <body id="background">
     <h1>Menu</h1>
+
+    <a href="index/lineChartIndex.html" target="content">PLAYER COUNT LINE CHART</a>
     <p>GeoMap</p>
     <ul>
-        <li><a href="index/geoMapCS.html" target="content">Cs2</a></li>
+        <li><a href="index/geoMapCS.html" target="content">CS2</a></li>
         <li><a href="index/geoMapVAL.html" target="content">Valorant</a></li>
     </ul>
-    <a href="index/lineChartIndex.html" target="content">PLAYER COUNT LINE CHART</a>
-    <br></br>
+    <p>Combination Chart</p>
+    <ul>
+        <li><a href="index/Views&ChannelsCS.html" target="content">CS2</a></li>
+        <li><a href="index/Views&ChannelsValo.html" target="content">Valorant</a></li>
+    </ul>
+    <br>
     <a href="index/prizesIndex.html" target ="content">PRIZES POOL BAR CHART</a>
 
 </body>
