--- a/index/geoMapVAL.html
+++ b/index/geoMapVAL.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Xe lan esport</title>
     <link rel="stylesheet" href="style/style.css">
     <script type="text/javascript" src="d3/d3.js"></script>
     <script type="text/javascript" src="chartScript/geoMap/valScript.js"></script>
-
+    <link rel="icon" href="../bar-chart.png" />
 </head>
+
 <body>
-    
-    
+
+
     <div id="world_map_SVG">
-        <div class="world_map_title"><h4>Me may beo:</h4></div>
+        <div class="world_map_title">
+            <h4>Me may beo:</h4>
+        </div>
         <div class="year-selection">
             <label class="year-select-label">
                 <select id="year-select">
@@ -24,4 +28,5 @@
     </div>
 
 </body>
+
 </html>
