--- a/index/lineChartIndex.html
+++ b/index/lineChartIndex.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Our First Line Chart</title>
-        <style>
-  /* Add some basic styling for the chart container */
-          #chart-container {
-            width: 100%;
-            height: 500px;
-          }
-        </style>
-        <script src="https://d3js.org/d3.v7.min.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Summarize</title>
+  <style>
+    /* Add some basic styling for the chart container */
+    #chart-container {
+      width: 50%;
+      height: auto;
+    }
+  </style>
+  <link rel="icon" href="../bar-chart.png" />
+  <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
+
 <body>
-  <h1>VALORANT CHART</h1>
-  <div id="chart-container"></div>
+  <h1>PLAYER COUNT CHART FROM 2020 TO 2024</h1>
+  <div id="line-chart"></div>
   <script src="chartScript/linechart/linechart.js"></script>
 </body>
+
 </html>
