--- a/index/geoMapVAL.html
+++ b/index/geoMapVAL.html
@@ -15,7 +15,7 @@
 
     <div id="world_map_SVG">
         <div class="world_map_title">
-            <h4>Me may beo:</h4>
+            <h4>Year:</h4>
         </div>
         <div class="year-selection">
             <label class="year-select-label">
